# framed

./: .gitignore  README.md  pyproject.toml
scripts/: evaluate.py  summarize.py  sweep.py  train.py  visualize_episode.py
src/framed/: baselines.py  callbacks.py  config.py  env.py  geometry.py  panel.py  units.py  visualize.py
tests/: test_baselines.py  test_env.py  test_geometry.py  test_panel.py
web/backend/: manage.py
web/backend/api/: urls.py  views.py
web/backend/framed_api/: settings.py  wsgi.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css  theme.tsx
web/frontend/src/api/: client.ts
web/frontend/src/components/: CommonInfoBar.tsx  ComparisonCard.tsx  Memberlegend.tsx  ModelPicker.tsx  PanelRenderer.tsx  PlaybackControls.tsx  ScoreCards.tsx  Sidebar.tsx
web/frontend/src/hooks/: useAnimation.ts
web/frontend/types/: panel.ts
