[project]
name = "framed"
version = "0.3.0"
description = "RL-based wall panel assembly sequencer (I've Been Framed)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "gymnasium>=0.29",
    "sb3-contrib>=2.3",
    "stable-baselines3>=2.3",
    "aim>=3.18",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "tqdm",
    "rich",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
web = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/framed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src", "scripts"]
